<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.friend.screens.FriendDetailActivity">

    <data>

        <variable
            name="viewModel"
            type="com.example.room.FriendDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mbti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.friend.mbti.name()}"
            android:textSize="24sp"
            tools:text="ISFP" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mbti_feature1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{context.getString(viewModel.getMBTIFeatures(viewModel.friend.mbti).get(0).strRes)}"
                android:textSize="20sp"
                tools:text="@string/isfp1" />

            <TextView
                android:id="@+id/mbti_feature2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{context.getString(viewModel.getMBTIFeatures(viewModel.friend.mbti).get(1).strRes)}"
                android:textSize="20sp"
                tools:text="@string/isfp2" />

            <TextView
                android:id="@+id/mbti_feature3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{context.getString(viewModel.getMBTIFeatures(viewModel.friend.mbti).get(2).strRes)}"
                android:textSize="20sp"
                tools:text="@string/isfp3" />
        </LinearLayout>
    </LinearLayout>
</layout>