<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".ui.profile.ProfileFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_top_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_gray"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile_image_iv"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/profile_tv_name"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/profile_image_iv" />

                <TextView
                    android:id="@+id/profile_email_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/profile_tv_email"
                    android:textColor="@color/thesopt_lightgray"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/profile_name_tv" />

                <TextView
                    android:id="@+id/profile_introduce_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/profile_tv_introduce"
                    android:textColor="@color/text_pressed_gray"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_email_tv" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_list_bt_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profile_top_cl">

                <Button
                    android:id="@+id/profile_follower_list_bt"
                    android:layout_width="160dp"
                    android:layout_height="46dp"
                    android:layout_marginVertical="13dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/profile_bt_follower"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/profile_repository_list_bt"
                    android:layout_width="160dp"
                    android:layout_height="46dp"
                    android:layout_marginVertical="13dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="11dp"
                    android:text="@string/profile_bt_repository"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/profile_fragment_fcv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/profile_list_bt_ll" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>